--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.1.0",
     "jquery": "^1.9.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
