--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### APP Files ###
 /src/environments/environment.prod.ts
 /src/environments/environment.ts
+/functions/node_modules
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 # compiled output
