Can now get users with uid

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jquery": "^1.9.1",
     "npm": "^6.1.0",
     "popper.js": "^1.14.3",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
