Added ngx-bootstrap but doesn't seem to be working with ng6

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
     "jquery": "^1.9.1",
+    "ngx-bootstrap": "^3.0.1",
     "npm": "^6.1.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
