--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "scripts": [
               "./node_modules/jquery/jquery.min.js",
               "./node_modules/popper.js/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/@ckeditor/ckeditor5-build-classic/build/ckeditor.js"
             ]
           },
           "configurations": {
