--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,8 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/ckeditor/ckeditor.js",
               "src/styles.css"
             ],
             "scripts": [
