--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
+    "ckeditor": "^4.5.11",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
     "jquery": "^1.9.1",
+    "ng2-ckeditor": "^1.2.1",
     "ngx-bootstrap": "^3.0.1",
     "npm": "^6.1.0",
     "popper.js": "^1.14.3",
