--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "ckeditor": "^4.5.11",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
-    "jquery": "^1.9.1",
+    "jquery": "^1.12.4",
     "ng2-ckeditor": "^1.2.1",
     "ngx-bootstrap": "^3.0.1",
     "npm": "^6.1.0",
+    "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
