--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.9",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
@@ -27,6 +29,7 @@
     "ckeditor": "^4.5.11",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^1.12.4",
     "ng2-ckeditor": "^1.2.1",
     "ngx-bootstrap": "^3.0.1",
