--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^6.0.3",
     "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.11",
+    "blueimp-canvas-to-blob": "^3.14.0",
     "bootstrap": "^4.1.1",
     "ckeditor": "^4.5.11",
     "core-js": "^2.5.4",
@@ -32,6 +33,8 @@
     "hammerjs": "^2.0.8",
     "jquery": "^1.12.4",
     "ng2-ckeditor": "^1.2.1",
+    "ng2-img-max": "^2.1.16",
+    "ng2-img-tools": "^1.1.3",
     "ngx-bootstrap": "^3.0.1",
     "npm": "^6.1.0",
     "perfect-scrollbar": "^1.4.0",
