--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^5.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "^1.12.4",
+    "lodash": "^4.17.10",
     "ng2-ckeditor": "^1.2.1",
     "ng2-img-max": "^2.1.16",
     "ng2-img-tools": "^1.1.3",
@@ -45,13 +46,13 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.116",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -63,6 +64,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
