--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.5",
+    "node-fetch": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
