--- a/firebase.json
+++ b/firebase.json
@@ -13,7 +13,7 @@
     "rewrites": [
       {
         "source": "**",
-        "function": "app"
+        "destination": ""
       }
     ]
   },
@@ -25,7 +25,8 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
     ],
     "source": "functions"
   }
