--- a/firebase.json
+++ b/firebase.json
@@ -13,7 +13,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": ""
+        "destination": "/index.html"
       }
     ]
   },
@@ -25,8 +25,7 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
     ],
     "source": "functions"
   }
