--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:ssr": "ng build --prod && ng run ddw-org:server && npm run webpack:server",
-    "serve:ssr": "node dist/ddw-org/server.js",
-    "webpack:server": "webpack --config webpack.server.config.js"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.9",
     "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -25,10 +22,7 @@
     "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/platform-server": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@nguniversal/express-engine": "^6.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.11",
     "angulartics2": "^6.2.0",
@@ -49,7 +43,6 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
-    "sitemap-generator": "^8.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -62,7 +55,6 @@
     "@types/lodash": "^4.14.116",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
-    "express": "^4.16.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -71,13 +63,9 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
-    "ts-loader": "^5.1.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0",
-    "ws": "^6.0.0",
-    "xmlhttprequest": "^1.8.0"
+    "webpack": "^4.19.0"
   }
 }
