--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "firebase-admin": "^6.0.0",
