--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-6-clipboard": "^1.0.1",
     "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.11",
     "angulartics2": "^6.2.0",
