--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "algoliasearch": "^3.30.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
