--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "blueimp-canvas-to-blob": "^3.14.0",
     "bootstrap": "^4.1.1",
     "ckeditor": "^4.5.11",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
     "hammerjs": "^2.0.8",
@@ -44,6 +45,7 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
