--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
+    "firebase-tools": "^5.1.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
