--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng2-ckeditor": "^1.2.1",
     "ng2-img-max": "^2.1.16",
     "ng2-img-tools": "^1.1.3",
+    "ng2-scroll-to": "^1.0.7",
     "ngx-bootstrap": "^3.0.1",
     "npm": "^6.4.1",
     "perfect-scrollbar": "^1.4.0",
