--- a/firebase.json
+++ b/firebase.json
@@ -4,16 +4,11 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "functions/dist",
     "rewrites": [
       {
         "source": "**",
-        "function": "app"
+        "function": "http"
       }
     ]
   },
