--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,6 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -10,22 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
-    "algoliasearch": "^3.30.0",
-    "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "firebase-admin": "^6.0.0",
-    "firebase-functions": "^2.0.5",
-    "node-fetch": "^2.2.0",
-    "puppeteer": "^1.8.0"
-  },
-  "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
-  },
-  "engines": {
-    "node": "8"
+    "firebase-admin": "~5.12.0",
+    "firebase-functions": "^2.1.0"
   },
   "private": true
 }
