--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:server:prod": "ng run ddw-org:server && webpack --config webpack.server.config.js --progress --colors",
+    "build:browser:prod": "ng build --prod",
+    "build:prod": "npm run build:browser:prod && npm run build:server:prod",
+    "server": "node local.js",
+    "build:prod:deploy": "npm run build:prod && npm run deploy",
+    "build:browser:serverless": "ng build --prod --base-href /",
+    "build:serverless": "npm run build:browser:serverless && npm run build:server:serverless",
+    "build:serverless:deploy": "npm run build:serverless && npm run deploy",
+    "deploy": "cp-cli dist/ functions/dist/ && cd functions && npm install && firebase deploy",
+    "build:server:serverless": "ng run ddw-org:server && webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +32,12 @@
     "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-toolkit/serverless": "1.1.28",
+    "@ng-toolkit/universal": "^1.1.47",
+    "@nguniversal/express-engine": "^6.0.3",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.3",
     "angular-6-clipboard": "^1.0.1",
     "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.11",
@@ -32,7 +47,10 @@
     "ckeditor": "^4.5.11",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "cors": "~2.8.4",
+    "cp-cli": "^1.1.0",
     "firebase": "^5.1.0",
+    "firebase-functions": "^2.1.0",
     "firebase-tools": "^5.1.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
@@ -47,7 +65,9 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "ts-loader": "4.2.0",
     "web-animations-js": "^2.3.1",
+    "webpack-cli": "^2.1.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -71,6 +91,9 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "webpack": "^4.19.0"
+    "webpack": "^4.19.0",
+    "ts-loader": "4.2.0",
+    "webpack-cli": "2.1.2",
+    "opencollective": "^1.0.3"
   }
 }
