--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@tinymce/tinymce-angular": "^3.1.0",
     "angular-6-clipboard": "^1.0.1",
     "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.11",
@@ -30,6 +31,7 @@
     "blueimp-canvas-to-blob": "^3.14.0",
     "bootstrap": "^4.1.1",
     "ckeditor": "^4.5.11",
+    "ckeditor4-angular": "^1.0.0-beta",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
